添加了多种格式及版本号

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -4,25 +4,72 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>date demo</title>
+	<style type="text/css">
+		strong{
+			font-size: 15px;
+		}
+		pre{
+			padding: 16px 0;
+			overflow: auto;
+			line-height: 1.45;
+			background-color: #f6f8fa;
+			border-radius: 3px;
+		}
+	</style>
 </head>
 <body>
-	<h3>时间选择</h3>
+	<pre>
+	<strong>jquery-date.js</strong>
+
+	 <b>配置：</b>
+	 //不填则使用默认配置
+	 data-options="{'type':'YYYY-MM-DD hh:mm:ss','beginYear':2010,'endYear':2088}"
+
+	 <b>调用方式：</b>
+	 //目前只支持id
+	 $.date('#date');
+
+	 <b>参数说明：</b>
+	 type--支持的格式
+	//年月日 时分秒
+	['YYYY-MM-DD hh:mm:ss','YY-MM-DD hh:mm:ss','YYYY/MM/DD hh:mm:ss','YY/MM/DD hh:mm:ss']
+	//年月日 时分
+	['YYYY-MM-DD hh:mm','YY-MM-DD hh:mm','YYYY/MM/DD hh:mm','YY/MM/DD hh:mm']
+	//年月日
+	['YYYY-MM-DD','YY-MM-DD','YYYY/MM/DD','YY/MM/DD']
+	//年月
+	['YYYY-MM','YY-MM','YYYY/MM','YY/MM']
+
+	beginYear -- 开始年份
+
+	endYear -- 结束年份，可不填，默认不会小于当前
+
+	limitTime--可选 today：今天之前的日期不可选 tomorrow：明天之前的不可选
+	</pre>
+	<h3>演示</h3>
 	<hr>
-	时间1
-	<input type="text" id="date" data-options='{"type":"YYYY-MM","beginYear":2010,"endYear":2088}'style="width:166px;height:19px;">
+	年月
+	<br>
+	<input type="text" id="date" data-options="{'type':'YYYY-MM','beginYear':2010,'endYear':2088}" style="width:166px;height:19px;">
 	<hr>
-	时间2
-	<input type="text" id="date2" data-options='{"type":"YYYY-MM-DD","beginYear":2010,"endYear":2088}'style="width:166px;height:19px;">
+	年月日
+	<br>
+	<input type="text" id="date2" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088}" style="width:166px;height:19px;">
 	<hr>
-	时间3
-	<input type="text" id="date3" data-options='{"type":"YYYY-MM-DD hh:mm","beginYear":2010,"endYear":2088}'style="width:166px;height:19px;">
+	年月日 时分
+	<br>
+	<input type="text" id="date3" data-options="{'type':'YYYY-MM-DD hh:mm','beginYear':2010,'endYear':2088}" style="width:166px;height:19px;">
 	<hr>
-	时间4
-	<button type="text" id="date4" data-options='{"type":"YYYY-MM-DD hh:mm:ss","beginYear":2010,"endYear":2088}' style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
+	年月日 时分秒
+	<br>
+	<button type="text" id="date4" data-options="{'type':'YYYY-MM-DD hh:mm:ss','beginYear':2010,'endYear':2088}" style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
 	<hr>
-	时间5
-	<input type="text" id="date5" data-options='{"type":"YYYY-MM-DD","beginYear":2010,"endYear":2088,"limitTime":"today"}'style="width:166px;height:19px;">
-	
+	时间限制
+	<br>
+	<input type="text" id="date5" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'limitTime':'today'}" style="width:166px;height:19px;">
+	<br>
+	<br>
+	<br>
 	<script src="../dist/build.js"></script>
 </body>
 </html>
