--- a/examples/demo.html
+++ b/examples/demo.html
@@ -68,6 +68,8 @@
 	<br>
 	<br>
 	<br>
-	<script src="../dist/build.js"></script>
+	<script src="../src/jquery-1.11.3.min.js"></script>
+	<script src="../jquery.date.js"></script>
+	<script src="../src/main.js"></script>
 </body>
 </html>
