--- a/examples/demo.html
+++ b/examples/demo.html
@@ -43,6 +43,8 @@
 	endYear -- 结束年份，可不填，默认不会小于当前
 
 	limitTime--可选 today：今天之前的日期不可选 tomorrow：明天之前的不可选
+	
+	location--可选 before：跳转至之前选择的时间
 	</pre>
 	<h3>演示</h3>
 	<hr>
@@ -65,11 +67,22 @@
 	时间限制
 	<br>
 	<input type="text" id="date5" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'limitTime':'today'}" style="width:166px;height:19px;">
+	<hr>
+	跳转至之前选择的时间
+	<br>
+	<input type="text" id="date6" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'location':'before'}" style="width:166px;height:19px;">
 	<br>
 	<br>
 	<br>
 	<script src="../src/jquery-1.11.3.min.js"></script>
 	<script src="../jquery.date.js"></script>
-	<script src="../src/main.js"></script>
+	<script>
+		$.date('#date');
+		$.date('#date2');
+		$.date('#date3');
+		$.date('#date4');
+		$.date('#date5');
+		$.date('#date6');	
+	</script>
 </body>
 </html>
