--- a/examples/demo.html
+++ b/examples/demo.html
@@ -37,6 +37,8 @@
 	['YYYY-MM-DD','YY-MM-DD','YYYY/MM/DD','YY/MM/DD']
 	//年月
 	['YYYY-MM','YY-MM','YYYY/MM','YY/MM']
+	//时分秒 时分
+	['hh:mm:ss','hh:mm']
 
 	beginYear -- 开始年份
 
@@ -62,15 +64,22 @@
 	<hr>
 	年月日 时分秒
 	<br>
-	<button type="text" id="date4" data-options="{'type':'YYYY-MM-DD hh:mm:ss','beginYear':2010,'endYear':2088}" style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
+	<hr>
+	时分秒
+	<br>
+	<button type="button" id="date7" data-options="{'type':'hh:mm:ss','beginYear':2010,'endYear':2088,'location':'before'}" style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
+	<hr>
+	时分
+	<br>
+	<button type="button" id="date8" data-options="{'type':'hh:mm','beginYear':2010,'endYear':2088}" style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
 	<hr>
 	时间限制
 	<br>
-	<input type="text" id="date5" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'limitTime':'today'}" style="width:166px;height:19px;">
+	<button type="button" id="date5" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'limitTime':'today'}" style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
 	<hr>
 	跳转至之前选择的时间
 	<br>
-	<input type="text" id="date6" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'location':'before'}" style="width:166px;height:19px;">
+	<button type="button" id="date6" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088,'location':'before'}" style="width:170px;height:25px;vertical-align: middle;text-align: left;"></button>
 	<br>
 	<br>
 	<br>
@@ -82,7 +91,9 @@
 		$.date('#date3');
 		$.date('#date4');
 		$.date('#date5');
-		$.date('#date6');	
+		$.date('#date6');
+		$.date('#date7');
+		$.date('#date8');	
 	</script>
 </body>
 </html>
