修改滚动高度时样式不对

--- a/examples/flexible.html
+++ b/examples/flexible.html
@@ -78,6 +78,12 @@
 	<br>
 	<script src="../src/jquery-1.11.3.min.js"></script>
 	<script src="../jquery.date.js"></script>
-	<script src="../src/main.js"></script>
+	<script>
+		$.date('#date');
+		$.date('#date2');
+		$.date('#date3');
+		$.date('#date4');
+		$.date('#date5');	
+	</script>
 </body>
 </html>
